# starlab

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  live-sc2-controlled-runner.yml
backend/: README.md
docs/: architecture.md  bicetb.md  branding_and_naming.md  checkpoint_asset_register.md  flagship_proof_pack.md  getting_started_clone_to_run.md  human_benchmark_register.md  model_weight_register.md  public_private_boundary.md  replay_corpus_register.md  replay_data_provenance.md  rights_register.md  starlab-v1.5.md  starlab-v1.5moonshot.md  starlab-vision.md  starlab.md  starlab_archive.md  starlab_operating_manual_v0.md  training_asset_register.md  xai_evidence_register.md
docs/audit/: DeferredIssuesRegistry.md  broad_exception_boundaries.md  m60_v2_readiness_findings.md
docs/deployment/: deployment_posture.md  env_matrix.md
docs/diligence/: field_test_checklist.md  field_test_session_template.md  industrial_hidden_rollout_operator_guide.md  m44_bounded_live_final_status_recharter.md  operating_manual_promotion_readiness.md  phase_vi_integrated_test_campaign.md
docs/runtime/: agent_training_program_contract_v1.md  baseline_evidence_pack_v1.md  benchmark_contract_scorecard_v1.md  benchmark_integrity_charter_v1.md  benchmark_integrity_evidence_reproducibility_gates_v1.md  canonical_run_artifact_v0.md  canonical_state_pipeline_v1.md  canonical_state_schema_v1.md  ci_tiering_field_test_readiness_v1.md  clone_to_run_smoke_v1.md  environment_drift_smoke_matrix.md  environment_lock.md  evaluation_diagnostics_failure_views_v1.md  evaluation_runner_tournament_harness_v1.md  full_local_training_campaign_v1.md  heuristic_baseline_suite_v1.md  hierarchical_agent_interface_v1.md  hierarchical_training_pipeline_v1.md  industrial_hidden_rollout_mode_v1.md  ladder_public_evaluation_protocol_evidence_surface_v1.md  learned_agent_comparison_harness_v1.md  learned_agent_evaluation_harness_v1.md  live_sc2_in_ci_charter_controlled_runner_v1.md  live_sc2_in_ci_hardening_cost_guardrails_v1.md  local_live_play_validation_harness_v1.md  match_execution_harness.md  observation_reconciliation_audit_v1.md  observation_surface_contract_v1.md  perceptual_bridge_prototype_v1.md  public_flagship_proof_pack_v1.md  pv1_campaign_observability_checkpoint_discipline_v1.md  pv1_post_campaign_readout_v1.md  pv1_tranche_a_execution_evidence_v1.md  pv1_tranche_b_full_run_threshold_evidence_v1.md  px1_candidate_strengthening_demo_readiness_v1.md  px1_full_industrial_campaign_execution_evidence_v1.md  px1_full_industrial_run_demo_charter_v1.md  px1_governed_demo_proof_pack_v1.md  px1_play_quality_demo_candidate_selection_v1.md  px2_autonomous_full_game_agent_charter_v1.md  (+84 more)
frontend/: README.md  netlify.toml.example
ops/: README.md
ops/render/: render.yaml.example
scripts/: px1_m02_local_validation_run.py  px1_m02_run_evaluation_series.py
starlab/: __init__.py  _io.py
starlab/baselines/: __init__.py  emit_heuristic_baseline_suite.py  emit_scripted_baseline_suite.py  heuristic_baseline_models.py  heuristic_baseline_scorecards.py  heuristic_baseline_suite.py  scripted_baseline_models.py  scripted_baseline_scorecards.py  scripted_baseline_suite.py
starlab/benchmark_integrity/: __init__.py  benchmark_integrity_charter.py  benchmark_integrity_controls.py  benchmark_integrity_evidence.py  benchmark_integrity_gate_evaluation.py  benchmark_integrity_gatepacks.py  benchmark_integrity_models.py  emit_benchmark_integrity_charter.py  emit_benchmark_integrity_evidence.py  emit_benchmark_integrity_gates.py
starlab/benchmarks/: __init__.py  benchmark_contract_models.py  benchmark_contract_schema.py  benchmark_scorecard_schema.py  emit_benchmark_contracts.py
starlab/equivalence/: __init__.py  emit_replay_execution_equivalence_audit.py  emit_replay_execution_equivalence_charter.py  emit_replay_execution_equivalence_evidence.py  equivalence_audit.py  equivalence_charter.py  equivalence_evidence.py  equivalence_gatepacks.py  equivalence_models.py  equivalence_profiles.py
starlab/evaluation/: __init__.py  diagnostics_models.py  diagnostics_views.py  emit_baseline_evidence_pack.py  emit_evaluation_diagnostics.py  emit_evaluation_tournament.py  emit_learned_agent_comparison.py  emit_learned_agent_evaluation.py  evaluation_runner.py  evaluation_runner_models.py  evidence_pack_models.py  evidence_pack_views.py  learned_agent_comparison_harness.py  learned_agent_comparison_io.py  learned_agent_comparison_models.py  learned_agent_evaluation.py  learned_agent_metrics.py  learned_agent_models.py  (+2 more)
tests/: __init__.py  runpy_helpers.py  test_baseline_evidence_pack.py  test_benchmark_contracts.py  test_bind_replay_cli.py  test_build_canonical_run_artifact_cli.py  test_burnysc2_opponent_adapter.py  test_canonical_run_artifact.py  test_canonical_state_pipeline.py  test_canonical_state_schema.py  test_canonical_state_schema_cli.py  test_emit_observation_surface_schema_cli.py  test_environment_drift.py  test_evaluate_environment_drift_cli.py  test_evaluation_diagnostics.py  test_evaluation_tournament.py  test_extract_replay_metadata_cli.py  test_governance.py  test_governance_ci.py  test_governance_docs.py  test_governance_milestones.py  test_governance_runtime.py  test_heuristic_baseline_suite.py  test_hierarchical_agent_interface.py  test_learned_agent_evaluation.py  test_lineage_seed.py  test_m00_v15_training_readiness_charter.py  test_m01_v15_training_asset_registers.py  test_m02_v15_long_gpu_environment_lock.py  test_m03_v15_checkpoint_lineage_manifest.py  test_m04_v15_xai_evidence_pack.py  test_m05_v15_strong_agent_scorecard.py  test_m06_v15_human_panel_benchmark.py  test_m07_v15_training_run_receipt.py  test_m08_v15_long_gpu_campaign.py  test_m09_v15_checkpoint_evaluation_promotion.py  test_m10_v15_replay_native_xai_demonstration.py  test_m11_v15_human_panel_bounded_benchmark.py  test_m12_v15_showcase_agent_release_pack.py  test_m13_v15_v2_go_no_go_decision.py  (+121 more)
(+1014 files in other folders)
