[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "starlab"
version = "0.0.0"
description = "STARLAB: governed RTS research substrate (bootstrap)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "LicenseRef-LICENSE" }
authors = [{ name = "Michael Cahill" }]
dependencies = [
    "jsonschema>=4.20,<5",
]

[project.optional-dependencies]
# Local SC2 match harness (BurnySc2); not used in CI.
sc2-harness = [
    "burnysc2>=7.2,<8",
]
# Canonical replay decode (Blizzard s2protocol + mpyq); CI uses fixture/mocked paths by default.
replay-parser = [
    "s2protocol>=5,<6",
]
dev = [
    "ruff>=0.4,<1",
    "mypy>=1.8,<2",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "pip-audit>=2.7,<3",
    "cyclonedx-bom>=4.0,<5",
    "types-jsonschema>=4.20,<5",
]

[tool.setuptools.packages.find]
include = ["starlab*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["starlab", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
packages = ["starlab", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "starlab.sc2.adapters.burnysc2_adapter"
ignore_errors = true

[[tool.mypy.overrides]]
module = "starlab.replays.s2protocol_adapter"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: fast fixture-backed subset for clone validation and CI smoke lane",
]

[tool.coverage.run]
branch = true
source = ["starlab"]
omit = []

[tool.coverage.report]
# M37: measured baseline ~80.0% total (branch-aware, full suite); gate ≈ baseline − 2pp; floor ≥ prior M32 gate.
fail_under = 78.0
precision = 1
show_missing = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
